--- a/views/layout.jade
+++ b/views/layout.jade
@@ -34,20 +34,20 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='/') #{__('Blockchain Demo')}
+          a.navbar-brand(href='/') #{__('区块链示例')}
         #navbar.collapse.navbar-collapse
           ul.nav.navbar-nav.navbar-right
             li(class={active: page === 'hash'})
-              a(href='/hash') #{__('Hash')}
+              a(href='/hash') #{__('哈希')}
             li(class={active: page === 'block'})
-              a(href='/block') #{__('Block')}
+              a(href='/block') #{__('区块')}
             li(class={active: page === 'blockchain'})
-              a(href='/blockchain') #{__('Blockchain')}
+              a(href='/blockchain') #{__('区块链')}
             li(class={active: page === 'distributed'})
-              a(href='/distributed') #{__('Distributed')}
+              a(href='/distributed') #{__('分布式')}
             li(class={active: page === 'tokens'})
-              a(href='/tokens') #{__('Tokens')}
+              a(href='/tokens') #{__('代币')}
             li(class={active: page === 'coinbase'})
-              a(href='/coinbase') #{__('Coinbase')}
+              a(href='/coinbase') #{__('币基交易')}
 
     block content
