--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   a(href='https://github.com/anders94/blockchain-demo/')
     img.github-ribbon(src='/images/fork-me-on-github-ribbon.png', alt='Fork me on GitHub')
   .container
-    h1 Blockchain Demo
+    h1 区块链示例
     .embed-responsive.embed-responsive-16by9
       iframe.embed-responsive-item(src='https://www.youtube.com/embed/_160oMzblY8')
     br
