--- a/views/hash.jade
+++ b/views/hash.jade
@@ -3,17 +3,17 @@ extends layout
 block content
   .container
 
-    h1 SHA256 #{__('Hash')}
+    h1 SHA256 #{__('哈希')}
     .well#well1
       form.form-horizontal
 
         .form-group
-          label.col-sm-2.control-label(for='data') #{__('Data')}:
+          label.col-sm-2.control-label(for='data') #{__('数据')}:
           .col-sm-10
             textarea#data.form-control(rows='10', onkeyup='$("#hash").val(sha256())')
 
         .form-group
-          label.col-sm-2.control-label(for='hash') #{__('Hash')}:
+          label.col-sm-2.control-label(for='hash') #{__('哈希')}:
           .col-sm-10
             input#hash.form-control(type='text', disabled)
 
