--- a/views/coinbase.jade
+++ b/views/coinbase.jade
@@ -2,10 +2,10 @@ extends layout
 
 block content
   .container-fluid
-    h1 #{__('Coinbase Transactions')}
+    h1 #{__('币基交易')}
     - var peers = {1: 'A', 2: 'B', 3: 'C'}
     - each peer, chain in peers
-      h3 #{__('Peer')} #{peer}
+      h3 #{__('节点')} #{peer}
       .row.row-horizon
         - var blocks = []
         - blocks.push({block: 1, chain: chain, nonce: 16651, coinbasevalue: '100.00', coinbaseto: 'Anders', txs: [], previous: '0000000000000000000000000000000000000000000000000000000000000000'})
