--- a/views/block.jade
+++ b/views/block.jade
@@ -2,12 +2,12 @@ extends layout
 
 block content
   .container
-    h1 #{__('Block')}
+    h1 #{__('区块')}
     .well#block1chain1well
       form.form-horizontal
 
         .form-group
-          label.col-sm-2.control-label(for='block1chain1number') #{__('Block')}:
+          label.col-sm-2.control-label(for='block1chain1number') #{__('区块')}:
           .col-sm-10
             .input-group
               span.input-group-addon #
@@ -19,12 +19,12 @@ block content
              input#block1chain1nonce.form-control(type='text', value='72608', onkeyup='updateHash(1, 1);')
 
         .form-group
-          label.col-sm-2.control-label(for='block1chain1data') #{__('Data')}:
+          label.col-sm-2.control-label(for='block1chain1data') #{__('数据')}:
           .col-sm-10
             textarea#block1chain1data.form-control(rows='10', onkeyup='updateHash(1, 1);')
 
         #state.form-group
-          label.col-sm-2.control-label(for='block1chain1hash') #{__('Hash')}:
+          label.col-sm-2.control-label(for='block1chain1hash') #{__('哈希')}:
           .col-sm-10
             input#block1chain1hash.form-control(type='text', disabled)
 
@@ -33,7 +33,7 @@ block content
             i.icon-spinner.icon-spin.icon-large
           .col-sm-10
             button#block1chain1mineButton.btn.btn-primary.ladda-button(data-style='expand-right')
-              span.ladda-label #{__('Mine')}
+              span.ladda-label #{__('挖矿')}
 
   script.
     $(function() {
