--- a/views/includes/coinbaseblock.jade
+++ b/views/includes/coinbaseblock.jade
@@ -2,7 +2,7 @@
   form.form-horizontal
 
     .form-group
-      label.col-sm-2.control-label(for='block#{block.block}chain#{block.chain}number') #{__('Block')}:
+      label.col-sm-2.control-label(for='block#{block.block}chain#{block.chain}number') #{__('区块')}:
       .col-sm-10
         .input-group
           span.input-group-addon #
@@ -14,10 +14,10 @@
          input.form-control(id='block#{block.block}chain#{block.chain}nonce', type='text', value='#{block.nonce}', onkeyup='updateChain(#{block.block}, #{block.chain});')
 
     .form-group
-      label.col-sm-2.control-label #{__('Coinbase')}:
+      label.col-sm-2.control-label #{__('币基')}:
       .col-sm-10
         .input-group
-          .input-group-addon #{__('$')}
+          .input-group-addon #{__('¥')}
           input.form-control(id='block#{block.block}chain#{block.chain}coinbasevalue', type='text', value='#{block.coinbasevalue}', onkeyup='updateChain(#{block.block}, #{block.chain});')
           .input-group-addon -&gt;
           input.form-control(id='block#{block.block}chain#{block.chain}coinbaseto', type='text', value='#{block.coinbaseto}', onkeyup='updateChain(#{block.block}, #{block.chain});')
@@ -27,20 +27,20 @@
       .col-sm-10
         - each tx, x in block.txs
           .input-group
-            .input-group-addon #{__('$')}
+            .input-group-addon #{__('¥')}
             input.form-control(id='block#{block.block}chain#{block.chain}tx#{x}value', type='text', value='#{tx.value}', onkeyup='updateChain(#{block.block}, #{block.chain});')
-            .input-group-addon #{__('From')}:
+            .input-group-addon #{__('从')}:
             input.form-control(id='block#{block.block}chain#{block.chain}tx#{x}from', type='text', value='#{tx.from}', onkeyup='updateChain(#{block.block}, #{block.chain});')
             .input-group-addon -&gt;
             input.form-control(id='block#{block.block}chain#{block.chain}tx#{x}to', type='text', value='#{tx.to}', onkeyup='updateChain(#{block.block}, #{block.chain});')
 
     #state.form-group
-      label.col-sm-2.control-label(for='block#{block.block}chain#{block.chain}previous') #{__('Prev')}:
+      label.col-sm-2.control-label(for='block#{block.block}chain#{block.chain}previous') #{__('前指针')}:
       .col-sm-10
         input.form-control(id='block#{block.block}chain#{block.chain}previous', type='text', value='#{block.previous}')
 
     #state.form-group
-      label.col-sm-2.control-label(for='block#{block.block}chain#{block.chain}hash') #{__('Hash')}:
+      label.col-sm-2.control-label(for='block#{block.block}chain#{block.chain}hash') #{__('哈希')}:
       .col-sm-10
         input.form-control(id='block#{block.block}chain#{block.chain}hash', type='text' disabled)
 
@@ -49,4 +49,4 @@
         i.icon-spinner.icon-spin.icon-large
       .col-sm-10
         button.btn.btn-primary.ladda-button(id='block#{block.block}chain#{block.chain}mineButton', data-style='expand-right')
-          span.ladda-label #{__('Mine')}
+          span.ladda-label #{__('挖矿')}
