--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@ html
     meta(name='author', content='Anders Brownworth')
     link(rel='icon', href='/favicon.ico')
 
-    title Blockchain Demo
+    title 区块链示例
 
     link(rel='stylesheet', href='/stylesheets/lib/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/lib/bootstrap-theme.min.css')
