--- a/views/block.jade
+++ b/views/block.jade
@@ -14,7 +14,7 @@ block content
               input#block1chain1number.form-control(type='number', value='1' onchange='updateHash(1, 1);' onkeyup='updateHash(1, 1);')
 
         .form-group
-          label.col-sm-2.control-label(for='block1chain1nonce') #{__('Nonce')}:
+          label.col-sm-2.control-label(for='block1chain1nonce') #{__('随机数')}:
           .col-sm-10
              input#block1chain1nonce.form-control(type='text', value='72608', onkeyup='updateHash(1, 1);')
 
